FIGHT ME IRL MEET ME TIME [] WE

--- a/project files/db/vgalab1.lpc.html
+++ b/project files/db/vgalab1.lpc.html
@@ -48,15 +48,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[15].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[3].inner[3].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -64,15 +64,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[14].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[3].inner[2].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -80,15 +80,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[13].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[3].inner[1].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -96,15 +96,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[12].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[3].inner[0].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -112,15 +112,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[11].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[2].inner[3].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -128,15 +128,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[10].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[2].inner[2].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -144,15 +144,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[9].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[2].inner[1].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -160,15 +160,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[8].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[2].inner[0].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -176,15 +176,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[7].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[1].inner[3].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -192,15 +192,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[6].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[1].inner[2].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -208,15 +208,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[5].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[1].inner[1].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -224,15 +224,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[4].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[1].inner[0].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -240,15 +240,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[3].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[0].inner[3].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -256,15 +256,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[2].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[0].inner[2].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -272,15 +272,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[1].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[0].inner[1].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -288,15 +288,15 @@
 <TD >0</TD>
 </TR>
 <TR >
-<TD >blockgen[0].b</TD>
-<TD >54</TD>
-<TD >35</TD>
+<TD >outer[0].inner[0].b</TD>
+<TD >64</TD>
+<TD >41</TD>
 <TD >0</TD>
-<TD >35</TD>
+<TD >41</TD>
 <TD >4</TD>
-<TD >35</TD>
-<TD >35</TD>
-<TD >35</TD>
+<TD >41</TD>
+<TD >41</TD>
+<TD >41</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
